--- a/project1/Makefile
+++ b/project1/Makefile
@@ -1,10 +1,22 @@
-CC=g++
+CC=gcc
 FLEX=flex
-splc:
-	@mkdir bin
-	$(FLEX) lex.l
-	$(CC) lex.yy.c -lfl -o ./bin/splc
-	@chmod +x ./bin/splc 
+BISON=bison
+
+
+.syntax: src/C/flex/bison/syntax.y
+	$(BISON) -dtv src/C/flex/bison/syntax.y
+.lex: src/lex.l
+	$(FLEX) src/lex.l
+splc: .syntax .lex
+	@if ! test -d "./bin"; then \
+		mkdir bin; \
+	fi
+	$(CC) syntax.tab.c -lfl -ly -o bin/splc
+debug: .syntax .lex
+	@if ! test -d "./bin"; then \
+		mkdir bin; \
+	fi
+	$(CC) syntax.tab.c -lfl -ly -DDEBUG -o bin/debug
 clean:
 	@rm -rf bin/
-.PHONY: splc
+	@rm lex.yy.c syntax.tab.* syntax.output
