--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,9 @@
 *.so
 *.bak
 *.log
+*.output
+*.tab.*
+*.yy.cpp
 peda-session-*
 .gdb_history
 lex.yy.c
@@ -11,10 +14,8 @@ syntax.tab.[hc]
 bin
 !*/class_test/*.out
 .vscode/
-project1/src/*.yy.cpp
-project1/src/*.tab.*
-project1/src/*.output
-project1/bin/*
+project1/bin/
 project1/build
-project1/build/*
 project1/test_ans
+project2/build
+project2/bin
